--- a/index.html
+++ b/index.html
@@ -277,6 +277,65 @@
         </div>
       </div>
     </section>
+    <section class="blog wrapper">
+      <div class="section-header">
+        <h2 class="section-title">My news and Projects</h2>
+        <p class="section-text">
+          Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+          cupidatat non proident, sunt in culpa qui officia deseruntm.
+        </p>
+      </div>
+      <ul class="blog-list">
+        <li class="blog-item big">
+          <div class="blog-img"><img src="img/blog/pic-1.jpg" alt="" /></div>
+          <div class="blog-info">
+            <span class="author">Oruna</span>
+            <span class="time">09:31 AM</span>
+            <span class="date">nov, 16, 2019</span>
+          </div>
+          <h3 class="blog-title">Cillum dolore</h3>
+          <p>
+            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deseruntm.Cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deseruntm.
+          </p>
+          <a href="" class="blog-link">Read more</a>
+        </li>
+        <li class="blog-item">
+          <div class="blog-img"><img src="img/blog/pic-2.jpg" alt="" /></div>
+          <div class="blog-info">
+            <span class="author">Oruna</span>
+            <span class="time">09:31 AM</span>
+            <span class="date">nov, 16, 2019</span>
+          </div>
+          <h3 class="blog-title">Cillum dolore</h3>
+          <p>
+            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deseruntm.Cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deseruntm.
+          </p>
+          <a href="" class="blog-link">Read more</a>
+        </li>
+        <li class="blog-item">
+          <div class="blog-img"><img src="img/blog/pic-3.jpg" alt="" /></div>
+          <div class="blog-info">
+            <span class="author">Oruna</span>
+            <span class="time">09:31 AM</span>
+            <span class="date">nov, 16, 2019</span>
+          </div>
+          <h3 class="blog-title">Cillum dolore</h3>
+          <p>
+            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deseruntm.Cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deseruntm.
+          </p>
+          <a href="" class="blog-link">Read more</a>
+        </li>
+      </ul>
+    </section>
     <!--Vendor scripts-->
     <script
       type="text/javascript"
