finish main part

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="libs/fancybox/jquery.fancybox.min.css" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Parisienne|Rubik:300,400,500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins|Parisienne|Rubik:300,400,500&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -16,7 +16,7 @@
     <div class="wrapper-black">
       <div class="wrapper">
         <header>
-          <nav class="nav">
+          <nav class="nav fade">
             <span class="nav-logo">Milastask</span>
             <ul class="nav-list">
               <li class="nav-item"><a href="">Home</a></li>
@@ -30,7 +30,7 @@
         </header>
         <article class="main-article">
           <section class="main">
-            <div class="main-item">
+            <div class="main-item fade">
               <h1>I am Jack Barboza</h1>
               <p class="">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -286,56 +286,214 @@
         </p>
       </div>
       <ul class="blog-list">
-        <li class="blog-item big">
-          <div class="blog-img"><img src="img/blog/pic-1.jpg" alt="" /></div>
-          <div class="blog-info">
-            <span class="author">Oruna</span>
-            <span class="time">09:31 AM</span>
-            <span class="date">nov, 16, 2019</span>
-          </div>
-          <h3 class="blog-title">Cillum dolore</h3>
-          <p>
-            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deseruntm.Cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deseruntm.
-          </p>
-          <a href="" class="blog-link">Read more</a>
-        </li>
-        <li class="blog-item">
-          <div class="blog-img"><img src="img/blog/pic-2.jpg" alt="" /></div>
-          <div class="blog-info">
-            <span class="author">Oruna</span>
-            <span class="time">09:31 AM</span>
-            <span class="date">nov, 16, 2019</span>
-          </div>
-          <h3 class="blog-title">Cillum dolore</h3>
-          <p>
-            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deseruntm.Cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deseruntm.
-          </p>
-          <a href="" class="blog-link">Read more</a>
-        </li>
-        <li class="blog-item">
-          <div class="blog-img"><img src="img/blog/pic-3.jpg" alt="" /></div>
-          <div class="blog-info">
-            <span class="author">Oruna</span>
-            <span class="time">09:31 AM</span>
-            <span class="date">nov, 16, 2019</span>
-          </div>
-          <h3 class="blog-title">Cillum dolore</h3>
-          <p>
-            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deseruntm.Cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deseruntm.
-          </p>
-          <a href="" class="blog-link">Read more</a>
-        </li>
+        <div class="big-item">
+          <li class="blog-item">
+            <div class="blog-img"><img src="img/blog/pic-1.jpg" alt="" /></div>
+            <div class="blog-content">
+              <span class="author">Oruna</span>
+              <span class="time">09:31 AM</span>
+              <span class="date">nov, 16, 2019</span>
+              <h3 class="blog-title"><a href="">Cillum dolore</a></h3>
+              <p>
+                Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deseruntm.
+              </p>
+              <a href="" class="blog-link">Read more</a>
+            </div>
+          </li>
+        </div>
+        <div class="small-items">
+          <li class="blog-item">
+            <div class="blog-img"><img src="img/blog/pic-2.jpg" alt="" /></div>
+            <div class="blog-content">
+              <span class="author">Oruna</span>
+              <span class="time">09:31 AM</span>
+              <span class="date">nov, 16, 2019</span>
+              <h3 class="blog-title"><a href="">Cillum dolore</a></h3>
+              <p>
+                Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deseruntm.
+              </p>
+              <a href="" class="blog-link">Read more</a>
+            </div>
+          </li>
+          <li class="blog-item">
+            <div class="blog-img"><img src="img/blog/pic-3.jpg" alt="" /></div>
+            <div class="blog-content">
+              <span class="author">Oruna</span>
+              <span class="time">09:31 AM</span>
+              <span class="date">nov, 16, 2019</span>
+              <h3 class="blog-title"><a href="">Cillum dolore</a></h3>
+              <p>
+                Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deseruntm.
+              </p>
+              <a href="" class="blog-link">Read more</a>
+            </div>
+          </li>
+        </div>
       </ul>
     </section>
+    <section class="reviews wrapper">
+      <div class="section-header">
+        <h2 class="section-title">Happy clients talk</h2>
+        <p class="section-text">
+          Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+          cupidatat non proident, sunt in culpa qui officia deseruntm.
+        </p>
+      </div>
+      <div class="reviews-slider">
+        <div class="slide fade">
+          <p class="slide-text">
+            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deseruntm.
+          </p>
+          <div class="review-author">
+            <p>Hira Doe<span>Web Developer</span></p>
+
+            <img
+              class="review-photo"
+              src="img/client-1.jpg"
+              alt="photo Hira Doe"
+            />
+          </div>
+        </div>
+        <div class="slide fade">
+          <p class="slide-text">
+            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deseruntm.
+          </p>
+          <div class="review-author">
+            <p>Kira Dolche<span>Designer</span></p>
+
+            <img
+              class="review-photo"
+              src="img/client-1.jpg"
+              alt="photo Hira Doe"
+            />
+          </div>
+        </div>
+        <div class="slide fade">
+          <p class="slide-text">
+            Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deseruntm.
+          </p>
+          <div class="review-author">
+            <p>John Corner<span>SMM Specialist</span></p>
+            <img
+              class="review-photo"
+              src="img/client-1.jpg"
+              alt="photo Hira Doe"
+            />
+          </div>
+        </div>
+
+        <div class="dots">
+          <button class="dot" onclick="currentSlide(1)"></button>
+          <button class="dot" onclick="currentSlide(2)"></button>
+          <button class="dot" onclick="currentSlide(3)"></button>
+        </div>
+      </div>
+    </section>
+    <section class="brands wrapper">
+      <div id="brands-slider" class="brands-slider">
+        <div class="brands-wrapper">
+          <div id="brands-items" class="brands-items">
+            <div class="brands-slide">
+              <div class="logos">
+                <img src="img/logo/logo-1.jpg" />
+                <img src="img/logo/logo-2.jpg" />
+                <img src="img/logo/logo-3.jpg" />
+                <img src="img/logo/logo-4.jpg" />
+              </div>
+            </div>
+            <div class="brands-slide">
+              <div class="logos">
+                <img src="img/logo/logo-1.jpg" />
+                <img src="img/logo/logo-1.jpg" />
+                <img src="img/logo/logo-1.jpg" />
+                <img src="img/logo/logo-1.jpg" />
+              </div>
+            </div>
+            <div class="brands-slide">
+              <div class="logos">
+                <img src="img/logo/logo-2.jpg" />
+                <img src="img/logo/logo-2.jpg" />
+                <img src="img/logo/logo-2.jpg" />
+                <img src="img/logo/logo-2.jpg" />
+              </div>
+            </div>
+            <!-- <div class="brands-slide">
+              <div class="logos">
+                <img src="img/logo/logo-3.jpg" />
+                <img src="img/logo/logo-3.jpg" />
+                <img src="img/logo/logo-3.jpg" />
+                <img src="img/logo/logo-3.jpg" />
+              </div>
+            </div> -->
+            <!-- <div class="brands-slide">
+              <div class="logos">
+                <img src="img/logo/logo-4.jpg" />
+                <img src="img/logo/logo-4.jpg" />
+                <img src="img/logo/logo-4.jpg" />
+                <img src="img/logo/logo-4.jpg" />
+              </div>
+            </div> -->
+          </div>
+        </div>
+        <button id="prev" class="control prev"></button>
+        <button id="next" class="control next"></button>
+      </div>
+    </section>
+    <section class="contact wrapper">
+      <div class="section-header contact-section">
+        <h2 class="section-title">Happy clients talk</h2>
+        <p class="section-text">
+          Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+          cupidatat non proident, sunt in culpa qui officia deseruntm.
+        </p>
+        <p class="section-contacts">
+          Adress: <span class="info">10111 Santa Monica, LA</span>
+        </p>
+        <p class="section-contacts">
+          Phone: <span class="info">+44 999 875 664</span>
+        </p>
+        <p class="section-contacts">
+          Email: <span class="info">info@example.com</span>
+        </p>
+      </div>
+      <div class="contact-form contact-section">
+        <form>
+          <input
+            id="contact-name"
+            type="text"
+            name="name"
+            placeholder="Your Name"
+          />
+          <input
+            id="contact-mail"
+            type="text"
+            name="mail"
+            placeholder="Your Email"
+          />
+          <input
+            id="contact-phone"
+            type="text"
+            name="phone"
+            placeholder="Phone"
+          />
+          <textarea
+            id="contact-comments"
+            name="comments"
+            placeholder="Your Comment"
+          ></textarea>
+          <button class="contact-btn btn" type="submit">Send message</button>
+        </form>
+      </div>
+    </section>
+    <footer class="footer wrapper">
+      <p>Copyright © 2018 . All rights Reserved.</p>
+    </footer>
     <!--Vendor scripts-->
     <script
       type="text/javascript"
