--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <li class="nav-item"><a href="">Projects</a></li>
               <li class="nav-item"><a href="">Blog</a></li>
             </ul>
+            <button class="nav-burger"></button>
           </nav>
         </header>
         <article class="main-article">
@@ -46,7 +47,6 @@
                 src="img/me.jpg"
                 alt="author photo"
                 width="380"
-                height="576"
               />
             </div>
           </section>
