--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
               <li class="nav-item"><a href="">Projects</a></li>
               <li class="nav-item"><a href="">Blog</a></li>
             </ul>
-            <button class="nav-burger"></button>
+            <button class="nav-burger">
+              <div class="nav-burger-item"></div>
+            </button>
           </nav>
         </header>
         <article class="main-article">
