--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
               <button class="cv-btn btn">Download</button>
             </div>
             <div class="main-photo">
-              <img
-                class="main"
-                src="img/me.jpg"
-                alt="author photo"
-                width="380"
-              />
+              <img class="main" src="img/me.jpg" alt="author photo" />
             </div>
           </section>
           <section class="social">
