--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="works-content marketing">
           <div class="work-img">
             <a data-fancybox="gallery" href="img/portfolio/pic-3.jpg">
-              <img src="img/portfolio/pic-3.jpg" />
+              <img src="img/portfolio/pic-3.jpeg" />
             </a>
           </div>
         </div>
@@ -444,7 +444,7 @@
     </section>
     <section class="contact wrapper">
       <div class="section-header contact-section">
-        <h2 class="section-title">Happy clients talk</h2>
+        <h2 class="section-title">Contact me</h2>
         <p class="section-text">
           Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
           cupidatat non proident, sunt in culpa qui officia deseruntm.
