added flip-in-x animation

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
       <!-- <div class="wrapper"> -->
       <header id="home" class="wrapper">
         <nav class="nav fade">
-          <span class="nav-logo">Milastask</span>
+          <span class="nav-logo flip-in-x">Milastask</span>
           <ul class="nav-list">
-            <li class="nav-item">
+            <li class="nav-item flip-in-x">
               <a class="nav-link active" data-scroll="home" href="#home"
                 >Home</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item flip-in-x">
               <a class="nav-link" data-scroll="features" href="#features"
                 >Features</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item flip-in-x">
               <a class="nav-link" data-scroll="about" href="#about">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item flip-in-x">
               <a class="nav-link" data-scroll="services" href="">Services</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item flip-in-x">
               <a class="nav-link" data-scroll="projects" href="">Projects</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item flip-in-x">
               <a class="nav-link" data-scroll="blog" href="">Blog</a>
             </li>
           </ul>
@@ -166,7 +166,7 @@
         </section>
       </div>
     </section>
-
+    <div id="top"></div>
     <section id="services" class="services wrapper">
       <div class="section-header">
         <h2 class="section-title">Services I provide</h2>
