--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
       <!-- <div class="wrapper"> -->
       <header id="home" class="wrapper">
         <nav class="nav fade">
-          <span class="nav-logo flip-in-x">Milastask</span>
+          <span class="nav-logo fade">Milastask</span>
           <ul class="nav-list">
-            <li class="nav-item flip-in-x">
+            <li class="nav-item">
               <a class="nav-link active" data-scroll="home" href="#home"
                 >Home</a
               >
             </li>
-            <li class="nav-item flip-in-x">
+            <li class="nav-item">
               <a class="nav-link" data-scroll="features" href="#features"
                 >Features</a
               >
             </li>
-            <li class="nav-item flip-in-x">
+            <li class="nav-item">
               <a class="nav-link" data-scroll="about" href="#about">About</a>
             </li>
-            <li class="nav-item flip-in-x">
+            <li class="nav-item">
               <a class="nav-link" data-scroll="services" href="">Services</a>
             </li>
-            <li class="nav-item flip-in-x">
+            <li class="nav-item">
               <a class="nav-link" data-scroll="projects" href="">Projects</a>
             </li>
-            <li class="nav-item flip-in-x">
+            <li class="nav-item">
               <a class="nav-link" data-scroll="blog" href="">Blog</a>
             </li>
           </ul>
@@ -51,7 +51,12 @@
         <article class="main-article">
           <section class="main">
             <div class="main-item fade">
-              <h1>I am Jack Barboza</h1>
+              <h1 class="main__title">
+                <span class="flip-in-x">I</span>
+                <span class="flip-in-x">am</span>
+                <span class="flip-in-x">Jack</span>
+                <span class="flip-in-x">Barboza</span>
+              </h1>
               <p class="">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -133,19 +138,19 @@
           <ul>
             <li>
               <h3 class="skills-title">HTML5</h3>
-              <span class="bar"><span class="html"></span></span>
+              <span class="bar"><span class="skill html"></span></span>
             </li>
             <li>
               <h3 class="skills-title">CSS3</h3>
-              <span class="bar"><span class="css"></span></span>
+              <span class="bar"><span class="skill css"></span></span>
             </li>
             <li>
               <h3 class="skills-title">Jquery</h3>
-              <span class="bar"><span class="jquery"></span></span>
+              <span class="bar"><span class="skill jquery"></span></span>
             </li>
             <li>
               <h3 class="skills-title">JavaScript</h3>
-              <span class="bar"><span class="javascript"></span></span>
+              <span class="bar"><span class="skill javascript"></span></span>
             </li>
           </ul>
         </section>
@@ -316,7 +321,7 @@
             </div>
           </li>
         </div>
-        <div class="small-items">
+        <div class="small__item">
           <li class="blog-item">
             <div class="blog-img"><img src="img/blog/pic-2.jpg" alt="" /></div>
             <div class="blog-content">
@@ -518,7 +523,7 @@
       src="libs/fancybox/jquery.fancybox.min.js"
     ></script>
     <!--User scripts-->
-    <script src="app.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/plugins.js"></script>
   </body>
 </html>
